--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
+# Ignore all
+*
+
+# Unignore all with extensions
+!*.*
+
+# Unignore all dirs
+!*/
+
+# Unignore Makefile
+!Makefile
+
+# Windows executables
 *.exe
+
+# Snapshots
+*.json
